# momentum-client

./: LICENSE  README.md  env.example  pyproject.toml
momentum_client/: client.py  hooks.py  manager.py
momentum_client/certs/: combined_ca.pem
momentum_client/functionality/: borgere.py  journalnotater.py  markeringer.py  opgaver.py  taksonomier.py  virksomheder.py  vitas.py
tests/: borgere_test.py  conftest.py  journalnotater_test.py  markeringer_test.py  opgaver_test.py  taksonomier_test.py  virksomheder_test.py  vitas_test.py
