[project]
name = "momentum-client"
version = "0.2.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.1",
    "certifi>=2025.8.3",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
]

[tool.setuptools.package-data]
momentum_client = ["certs/*.pem"]